# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VALET"
version = "0.0.3"
description = "A library for computing electronic charges and charge transfer in electronic transition using Natural Transition Orbitals"
readme = "README.md"
authors = [{ name = "Talha Bin Masood", email = "talha.bin.masood@liu.se" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["electronic transitions", "cube files", "NTO", "Orbital", "Comparison", "Visualization", "Visual analysis"]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib",
    "cvxpy",
]
requires-python = ">=3.6"

[project.optional-dependencies]
vis = ["vtk>=9.1.0"]
jupyter = ["vtk>=9.1.0", "jupyterlab", "ipympl"]

[project.urls]
Homepage = "https://github.com/tbmasood/VALET"

[project.scripts]
valet = "valet.__main__:main"
